Corrected nav ul alignment

--- a/css/main.css
+++ b/css/main.css
@@ -193,6 +193,7 @@ header nav ul{
   display: flex;
   justify-content: space-around;
   width: 100%;
+  padding: 0;
 }
 
 
